# Cyberbrain-Deprecated

./: .gitignore  LICENSE  Makefile  README.md  Roadmap.md  azure-pipelines.yml  pyproject.toml  tox.ini
cyberbrain/: __init__.py  api.py  backtrace.py  basis.py  caller_ast.py  callsite.py  callsite_test.py  computation.py  cyberbrain.py  data.py  debugging.py  flow.py  flow_test.py  format.py  frame_id.py  testing.py  utils.py  vars.py
test/: __init__.py  gen_golden.py  gen_test_data.py  test_executor.py
test/doc_example/: computation.golden.json  doc_example.py  flow.golden.json
test/exclude_events/: call_libs.json  call_libs.py  computation.golden.json  flow.golden.json
test/function/: computation.golden.json  flow.golden.json  flow.json  simple_func.json  simple_func.py
test/hello_world/: computation.golden.json  expected.json  flow.golden.json  flow.json  hello.json  hello.py
test/list_comp/: computation.golden.json  flow.golden.json  flow.json  list_comp.json  list_comp.py
test/loop/: computation.golden.json  flow.golden.json  flow.json  loop.json  loop.py
test/loop1000/: computation.golden.json  flow.golden.json  loop1000.py
test/method/: computation.golden.json  flow.golden.json  method.py
test/modules/: bar.py  computation.golden.json  flow.golden.json  flow.json  foo.py  main.json  main.py
test/multicall/: computation.golden.json  flow.golden.json  flow.json  multicall.json  multicall.py
test/multiline/: computation.golden.json  flow.golden.json  multiline_statement.json  multiline_statement.py
